// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PizzaService test suite Should add new ingredient to map 1`] = `
PizzaService {
  "ingredients": Map {
    "Cheese" => 1,
  },
  "pizzaList": Set {},
}
`;

exports[`PizzaService test suite Should add pizza to the set 1`] = `
PizzaService {
  "ingredients": Map {},
  "pizzaList": Set {
    PizzaDTO {
      "ingredients": [],
      "name": "test pizza",
      "price": 30,
    },
  },
}
`;

exports[`PizzaService test suite Should restore ingredients in service on error 1`] = `
PizzaService {
  "ingredients": Map {
    "Cheese" => 0,
    "Peperoni" => 2,
    "Pineapple" => 2,
    "Tomato" => 2,
  },
  "pizzaList": Set {
    PizzaDTO {
      "ingredients": [
        "Cheese",
        "Pineapple",
      ],
      "name": "test pizza one",
      "price": 30,
    },
    PizzaDTO {
      "ingredients": [
        "Peperoni",
        "Tomato",
      ],
      "name": "test pizza two",
      "price": 30,
    },
  },
}
`;

exports[`PizzaService test suite Should update amount of ingredient if its already in map 1`] = `
PizzaService {
  "ingredients": Map {
    "Eggs" => 4,
  },
  "pizzaList": Set {},
}
`;
